added placeholder art

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,5 @@
-
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,11 +7,41 @@
   <title>Home</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
   <div id="header">
     <h1>_ARCHITEKT</h1>
-    <h4>Welcome to our online portfolio, we are a small group of passionate designers and architects, looking to change and create amazing digital images to inspire others to follow in our innovate steps. Free Architect WordPress</h4>
+    <h4>Welcome to our online portfolio, we are a small group of passionate designers and architects, looking to change
+      and create amazing digital images to inspire others to follow in our innovate steps. Free Architect WordPress</h4>
   </div>
-  
+  <div id="pictures">
+    <div id="bigPictures">
+      <img src="https://assets.pernod-ricard.com/nz/media_images/test.jpg?hUV74FvXQrWUBk1P2.fBvzoBUmjZ1wct" alt="">
+    </div>
+    <div id="smallPictures">
+      <div class="img">
+        <img src='https://assets.pernod-ricard.com/nz/media_images/test.jpg?hUV74FvXQrWUBk1P2.fBvzoBUmjZ1wct' alt="">
+      </div>
+      <div class="img">
+        <img src='https://assets.pernod-ricard.com/nz/media_images/test.jpg?hUV74FvXQrWUBk1P2.fBvzoBUmjZ1wct' alt="">
+      </div>
+      <div class="img">
+        <img src='https://assets.pernod-ricard.com/nz/media_images/test.jpg?hUV74FvXQrWUBk1P2.fBvzoBUmjZ1wct' alt="">
+      </div>
+      <div class="img">
+        <img src='https://assets.pernod-ricard.com/nz/media_images/test.jpg?hUV74FvXQrWUBk1P2.fBvzoBUmjZ1wct' alt="">
+      </div>
+      <div class="img">
+        <img src='https://assets.pernod-ricard.com/nz/media_images/test.jpg?hUV74FvXQrWUBk1P2.fBvzoBUmjZ1wct' alt="">
+      </div>
+      <div class="img">
+        <img src='https://assets.pernod-ricard.com/nz/media_images/test.jpg?hUV74FvXQrWUBk1P2.fBvzoBUmjZ1wct' alt="">
+      </div>
+      <div class="img">
+        <img src='https://assets.pernod-ricard.com/nz/media_images/test.jpg?hUV74FvXQrWUBk1P2.fBvzoBUmjZ1wct' alt="">
+      </div>
+    </div>
+  </div>
 </body>
+
 </html>
