--- a/views/index.hbs
+++ b/views/index.hbs
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+  {{> header}}
   <div id="header">
     <h1>_ARCHITEKT</h1>
     <h4>Welcome to our online portfolio, we are a small group of passionate designers and architects, looking to change
