--- a/views/templates/login.hbs
+++ b/views/templates/login.hbs
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <form action="/login.html" method="POST">
+  <form action="/login" method="POST">
     <div>
       <label>Username:</label>
       <input type="text" name="username" />
