--- a/views/templates/register.hbs
+++ b/views/templates/register.hbs
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h3>Please Register as a user</h3>
-  <form action="/register.html" method="POST">
+  <form action="/register" method="POST">
     <label for="username">Username:</label><br>
     <input type="text" name="username" />
 
