removed excess comment lines

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -28,8 +28,8 @@
         <h4>{{author}}</h4>
         <h4>{{description}}</h4>
       </a>
-    </div> --}}
-  {{!-- {{/each}}
+    </div>
+  {{/each}}
   </div>
 </body>
 
