added home/loging/register buttons to pages

--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,8 +1,14 @@
 <div>
+    <a href="./">
+        <button>Home</button>
+    </a>
+</div>
+<div>
     <a href="./login">
       <button>Login</button>
     </a>
-  </div><div>
+</div>
+<div>
     <a href="./register">
         <button>Register</button>
     </a>
