--- a/views/templates/details.hbs
+++ b/views/templates/details.hbs
@@ -9,7 +9,22 @@
 </head>
 
 <body>
-    <h1>I work now</h1>
+    <div>
+        <a href="/">
+            <button>Home</button>
+        </a>
+    </div>
+    <div>
+        <a href="/login">
+            <button>Login</button>
+        </a>
+    </div>
+    <div>
+        <a href="/register">
+            <button>Register</button>
+        </a>
+    </div>
+
     <div id="pictures">
         <img src='{{link}}'>
         <h4>{{author}}</h4>
