--- a/views/templates/register.hbs
+++ b/views/templates/register.hbs
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=h3, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
 </head>
+
 <body>
+  {{> header}}
   <h3>Please Register as a user</h3>
   <form action="/register" method="POST">
     <label for="username">Username:</label><br>
@@ -27,4 +30,5 @@
     <button>Submit</button>
   </form>
 </body>
+
 </html>
