--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -13,3 +13,8 @@
         <button>Register</button>
     </a>
 </div>
+<div>
+    <a href="/user">
+        <button>Profile</button>
+    </a>
+</div>
