--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -18,3 +18,8 @@
         <button>Profile</button>
     </a>
 </div>
+<div>
+    <a href="/logout">
+        <button>Logout</button>
+    </a>
+</div>
