added class to buttons

--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,25 +1,21 @@
 <div>
-    <a href="./">
+    <a href="./" class='navButtons'>
         <button>Home</button>
     </a>
-</div>
-<div>
-    <a href="./login">
-      <button>Login</button>
+
+    <a href="./login" class='navButtons'>
+        <button>Login</button>
     </a>
-</div>
-<div>
-    <a href="./register">
+
+    <a href="./register" class='navButtons'>
         <button>Register</button>
     </a>
-</div>
-<div>
-    <a href="/user">
+
+    <a href="/user" class='navButtons'>
         <button>Profile</button>
     </a>
-</div>
-<div>
-    <a href="/logout">
+
+    <a href="/logout" class='navButtons'>
         <button>Logout</button>
     </a>
 </div>
