--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,7 +11,7 @@
 <body>
   {{> header}}
   <div id="header">
-    <h1>_ARCHITEKT</h1>
+    <div id="title">_ARCHITEKT</div>
     <h4>Welcome to our online portfolio, we are a small group of passionate designers and architects, looking to change
       and create amazing digital images to inspire others to follow in our innovate steps. Free Architect WordPress</h4>
   </div>
