renamed details to gallery

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -16,14 +16,14 @@
       and create amazing digital images to inspire others to follow in our innovate steps. Free Architect WordPress</h4>
   </div>
   <div id="pictures">
-      <a href="/details/{{id}}" id="bigPicture">
+      <a href="/gallery/{{id}}" id="bigPicture">
         <img src='{{link}}'>
         <h4>{{author}}</h4>
         <h4>{{description}}</h4>
       </a>
   {{#each smallPictures}}
     <div id="smallPictures">
-      <a href="/details/{{id}}" class="smallPictures">
+      <a href="/gallery/{{id}}" class="smallPictures">
         <img src="{{link}}">
         <h4>{{author}}</h4>
         <h4>{{description}}</h4>
