added leading / to action

--- a/views/templates/new.hbs
+++ b/views/templates/new.hbs
@@ -11,7 +11,7 @@
 <body>
     {{> header}}
     <h3>Add a new Gallery Photo</h3>
-    <form action="gallery/new" method="POST">
+    <form action="/gallery/new" method="POST">
         <label for="author">Author:</label><br>
         <input type="text" name="author" />
 
