--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -18,4 +18,7 @@
     <a href="/logout" class='navButtons'>
         <button>Logout</button>
     </a>
+    <a href="/gallery/" id="bigPicture">
+        <button>Edit</button>
+    </a>
 </div>
