added css styling

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -12,7 +12,7 @@
   {{> header}}
   <div id="header">
     <div id="title">_ARCHITEKT</div>
-    <h4>Welcome to our online portfolio, we are a small group of passionate designers and architects, looking to change
+    <h4 id="titleDesc">Welcome to our online portfolio, we are a small group of passionate designers and architects, looking to change
       and create amazing digital images to inspire others to follow in our innovate steps. Free Architect WordPress</h4>
   </div>
   <div id="pictures">
