--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,20 +1,67 @@
+body{
+    background-image: url("../Resources/dust_scratches.png");
+    background-size: cover;
+}
+
+img {
+    height: 500px;
+    width: 600px;
+}
+
+#navButtons{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    border: none;
+    text-align: center;
+    padding: 15px 32px;
+    background-color: grey;
+    text-decoration: none;
+}
+
+.navButton{
+    padding: 15px 32px;
+}
+
 #header{
     padding-top: 40px;
-    display: inline-flex;
+    display: flex;
+    justify-content: center;
 }
 
 #title{
-    font-size: 80px;
-    padding-right: 40px;
-    padding-left: 100px;
+    font-size: 100px;
+    padding-right: 80px;
+    padding-left: 120px;
     border-top: 1px dotted black;
+    margin-left: 100px;
 }
 
 #titleDesc{
-    padding-right: 100px;
-    padding-left: 200px;
+    padding-right: 80px;
+    padding-left: 100px;
     border-top: 1px dotted black;
     font-size: 20px;
     padding-bottom: 60px;
-    margin-left: 50px;
+    margin-right: 100px;
+    border-left: 1px dotted black;
+    padding-top: 20px;
+}
+
+#bigPicture{
+    display: flex;
+    justify-content: center;
+}
+
+#rightLink{
+    width: 500px;;
+}
+
+#smallPictureContainer{
+    column-count: 2;
+    padding-left: 170px;
+}
+
+.smallPictures{
+    width: 30%;
 }
