--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,24 +1,21 @@
-<div>
-    <a href="./" class='navButtons'>
-        <button>Home</button>
+<div id="navButtons">
+    <a href="./">
+        <button class="navButton">Home</button>
     </a>
 
-    <a href="./login" class='navButtons'>
-        <button>Login</button>
+    <a href="./login">
+        <button class="navButton">Login</button>
     </a>
 
-    <a href="./register" class='navButtons'>
-        <button>Register</button>
+    <a href="./register">
+        <button class="navButton">Register</button>
     </a>
 
-    <a href="/user" class='navButtons'>
-        <button>Profile</button>
+    <a href="/user">
+        <button class="navButton">Profile</button>
     </a>
 
-    <a href="/logout" class='navButtons'>
-        <button>Logout</button>
-    </a>
-    <a href="/gallery/" id="bigPicture">
-        <button>Edit</button>
+    <a href="/logout">
+        <button class="navButton">Logout</button>
     </a>
 </div>
