--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Home</title>
+  <title>Architect By Day</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -12,9 +12,7 @@
   {{> header}}
   <div id="header">
     <div id="title">_ARCHITEKT</div>
-    <div id="titleDesc">Welcome to our online portfolio, we are a small group of passionate designers and architects,
-      looking to change
-      and create amazing digital images to inspire others to follow in our innovate steps. Free Architect WordPress.
+    <div id="titleDesc">Welcome to our online portfolio, we are a small group of passionate designers and architects, looking to change and create amazing digital images to inspire others to follow in our innovate steps. Free Architect WordPress.
     </div>
   </div>
 
